@@ -69,7 +69,6 @@
 #define ACE_HAS_CLOCK_SETTIME
 #define ACE_HAS_CONSISTENT_SIGNAL_PROTOTYPES
 #define ACE_HAS_DIRENT
-#define ACE_HAS_EXCEPTIONS
 #define ACE_HAS_GETIFADDRS
 #define ACE_HAS_GETPAGESIZE
 #define ACE_HAS_GETRUSAGE
@@ -88,7 +87,7 @@
 #define ACE_HAS_NONCONST_SELECT_TIMEVAL
 #define ACE_HAS_NONCONST_SWAB
 #define ACE_HAS_POLL
-#define ACE_HAS_POSITION_INDEPENDENT_POINTERS
+#define ACE_HAS_POSITION_INDEPENDENT_POINTERS 1
 #define ACE_HAS_POSIX_GETPWNAM_R
 #define ACE_HAS_POSIX_NONBLOCK
 #define ACE_HAS_POSIX_TIME
@@ -106,6 +105,7 @@
 #define ACE_HAS_RECURSIVE_THR_EXIT_SEMANTICS
 #define ACE_HAS_REENTRANT_FUNCTIONS
 #define ACE_HAS_RTLD_LAZY_V
+#define ACE_HAS_SCANDIR
 #define ACE_HAS_SEMUN
 #define ACE_HAS_SIGACTION_CONSTP2
 #define ACE_HAS_SIGINFO_T
@@ -118,7 +118,6 @@
 #define ACE_HAS_SOCKADDR_MSG_NAME
 #define ACE_HAS_SOCKLEN_T
 #define ACE_HAS_SSIZE_T
-#define ACE_HAS_STANDARD_CPP_LIBRARY
 #define ACE_HAS_STRERROR
 #define ACE_HAS_STRINGS
 #define ACE_HAS_STRING_CLASS
@@ -132,7 +131,6 @@
 #define ACE_HAS_SYS_SOCKIO_H
 #define ACE_HAS_SYS_SYSCALL_H
 #define ACE_HAS_TERMIOS
-#define ACE_HAS_THREADS
 #define ACE_HAS_THREAD_SPECIFIC_STORAGE
 #define ACE_HAS_TIMEZONE_GETTIMEOFDAY
 #define ACE_HAS_UALARM
@@ -188,8 +186,8 @@
 
 #define ACE_EXPLICIT_TEMPLATE_DESTRUCTOR_TAKES_ARGS
 #define ACE_PAGE_SIZE 4096
-#define ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB
-
+#define ACE_SCANDIR_CMP_USES_CONST_VOIDPTR
+#define ACE_SCANDIR_SEL_LACKS_CONST
 
 // OpenBSD 3.6
 #if (OpenBSD < 200411)
